--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit
 pandas
 openpyxl
-openai
-python-dotenv
+gspread             # optional (only if you enable Google Sheets)
+oauth2client        # optional (for Google Sheets)
